more style tweaks, upgrade pux

--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+div.grade-set {
+    background: rgba(0,0,0, 0.1);
+}
+
+li:nth-child(even) {
+    background: rgba(0,0,128, 0.1);
+}
+
 h1 {
     text-align: center;
 }
